--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header h1 {
     margin-top: -20px;
     width: 700px;
     height: 700px;
-    background-image: url('.vscode/fff.jpg');
+    background-image: url('photos/fff.jpg');
     background-size: 700px 700px;
     display: flex;
     flex-direction: column;
